--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,16 +1,31 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'Paquete Dplyr en R y su uso para el manejo de datos'
+date: 2022-10-10
+permalink: /posts/2022/10/Dplyr-R/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - R
+  - RStudio
+  - Data Analysis
+  - dplyr
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+# ¿Análisis de datos? dplyr es tu aliado
 
-Headings are cool
+Una de las herramientas más usadas para el análisis de datos es R, este software cuenta con funciones nativas que nos pueden ayudar a la hora de limpiar o querer extraer alguna información de nuestros conjuntos de datos. Sin embargo, muchas de estas operaciones pueden ser tediosas de escribir, para demostrarlo usaremos un set de datos de Kaggle sobre [población humana](https://www.kaggle.com/datasets/iamsouravbanerjee/world-population-dataset). Luego de descargar el archivo .csv procederemos a cargarlo en RStudio.
+<pre>
+        library(readr)
+        popData <- read_csv(file = "./world_pop/world_population.csv")
+</pre>
+Imaginemos que deseamos el ranking y la abreviatura de Chile, para el caso del código nativo de R, esto se haría así:
+        <pre>popData[which(popData$Country == "Chile"), names(popData) %in% c("Rank", "CCA3")]</pre>
+
+Mientras que con dplyr haríamos esto:
+<pre>
+        popData %>%
+          filter(Country=="Chile")%>%
+          select(Rank,CCA3)
+<pre>
+
 ======
 
 You can have many headings
