--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -12,19 +12,21 @@ tags:
 # ¿Análisis de datos? dplyr es tu aliado
 
 Una de las herramientas más usadas para el análisis de datos es R, este software cuenta con funciones nativas que nos pueden ayudar a la hora de limpiar o querer extraer alguna información de nuestros conjuntos de datos. Sin embargo, muchas de estas operaciones pueden ser tediosas de escribir, para demostrarlo usaremos un set de datos de Kaggle sobre [población humana](https://www.kaggle.com/datasets/iamsouravbanerjee/world-population-dataset). Luego de descargar el archivo .csv procederemos a cargarlo en RStudio.
-<pre>
-        library(readr)
-        popData <- read_csv(file = "./world_pop/world_population.csv")
-</pre>
+```R
+library(readr)
+popData <- read_csv(file = "./world_pop/world_population.csv")
+```
 Imaginemos que deseamos el ranking y la abreviatura de Chile, para el caso del código nativo de R, esto se haría así:
-        <pre>popData[which(popData$Country == "Chile"), names(popData) %in% c("Rank", "CCA3")]</pre>
+```R
+popData[which(popData$Country == "Chile"), names(popData) %in% c("Rank", "CCA3")]
+```
 
 Mientras que con dplyr haríamos esto:
-<pre>
-        popData %>%
-          filter(Country=="Chile")%>%
-          select(Rank,CCA3)
-<pre>
+```R
+popData %>%
+filter(Country=="Chile")%>%
+select(Rank,CCA3)
+```
 
 ======
 
