cambiando tamaño del codigo

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -2,6 +2,7 @@
 title: 'Paquete Dplyr en R y su uso para el manejo de datos'
 date: 2022-10-10
 permalink: /posts/2022/10/Dplyr-R/
+code-block-font-size: \large
 tags:
   - R
   - RStudio
@@ -27,6 +28,7 @@ popData %>%
 filter(Country=="Chile")%>%
 select(Rank,CCA3)
 ```
+En el paquete dplyr existen diversas funciones que nos ayudarán a manipular nuestros dataframes, las cuales podemos dividir en funciones para resumir la información (summarise, count), para agrupar casos (group_by, rowwise, ungroup), Manipular casos (filter, distinct, slice, slice_sample, slice_min, slice_head, arrange, add_row), Manipular variables (pull, select, relocate, across, c_across, mutate, transmute, rename). Revisemos algunas de estas funciones.
 
 ======
 
