--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -13,10 +13,13 @@ tags:
 # ¿Análisis de datos? dplyr es tu aliado
 
 Una de las herramientas más usadas para el análisis de datos es R, este software cuenta con funciones nativas que nos pueden ayudar a la hora de limpiar o querer extraer alguna información de nuestros conjuntos de datos. Sin embargo, muchas de estas operaciones pueden ser tediosas de escribir, para demostrarlo usaremos un set de datos de Kaggle sobre [población humana](https://www.kaggle.com/datasets/iamsouravbanerjee/world-population-dataset). Luego de descargar el archivo .csv procederemos a cargarlo en RStudio.
+
+<code class= "size-12">
 ```R
 library(readr)
 popData <- read_csv(file = "./world_pop/world_population.csv")
 ```
+</code>
 Imaginemos que deseamos el ranking y la abreviatura de Chile, para el caso del código nativo de R, esto se haría así:
 ```R
 popData[which(popData$Country == "Chile"), names(popData) %in% c("Rank", "CCA3")]
@@ -29,6 +32,17 @@ filter(Country=="Chile")%>%
 select(Rank,CCA3)
 ```
 En el paquete dplyr existen diversas funciones que nos ayudarán a manipular nuestros dataframes, las cuales podemos dividir en funciones para resumir la información (summarise, count), para agrupar casos (group_by, rowwise, ungroup), Manipular casos (filter, distinct, slice, slice_sample, slice_min, slice_head, arrange, add_row), Manipular variables (pull, select, relocate, across, c_across, mutate, transmute, rename). Revisemos algunas de estas funciones.
+
+El primer elemento que nos aporta dplyr y no mencioné antes es la tubería o pipe (%>%) podemos concatenar los resultados de una función y aplicarle otra directamente.
+
+```R
+head(popData) # Sin uso de pipe
+
+popData %>%
+  head() # Con uso de pipe
+
+```
+Ahora si, vamos a las funciones de Dplyr, partiremos por select(), esta nos permite seleccionar columnas de nuestro data frame indicando su nombre. Veamos, seleccionemos los continentes de nuestro data set. Esto nos genera un dataframe de una única columna con los continentes.
 
 ======
 
