--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -14,12 +14,11 @@ tags:
 
 Una de las herramientas más usadas para el análisis de datos es R, este software cuenta con funciones nativas que nos pueden ayudar a la hora de limpiar o querer extraer alguna información de nuestros conjuntos de datos. Sin embargo, muchas de estas operaciones pueden ser tediosas de escribir, para demostrarlo usaremos un set de datos de Kaggle sobre [población humana](https://www.kaggle.com/datasets/iamsouravbanerjee/world-population-dataset). Luego de descargar el archivo .csv procederemos a cargarlo en RStudio.
 
-<code class= "size-12">
-
+```R
 library(readr)
 popData <- read_csv(file = "./world_pop/world_population.csv")
+```
 
-</code>
 Imaginemos que deseamos el ranking y la abreviatura de Chile, para el caso del código nativo de R, esto se haría así:
 ```R
 popData[which(popData$Country == "Chile"), names(popData) %in% c("Rank", "CCA3")]
@@ -42,7 +41,20 @@ popData %>%
   head() # Con uso de pipe
 
 ```
-Ahora si, vamos a las funciones de Dplyr, partiremos por select(), esta nos permite seleccionar columnas de nuestro data frame indicando su nombre. Veamos, seleccionemos los continentes de nuestro data set. Esto nos genera un dataframe de una única columna con los continentes.
+Ahora si, vamos a las funciones de Dplyr, partiremos por select(), esta nos permite seleccionar columnas de nuestro data frame indicando su nombre. Veamos, seleccionemos los continentes de nuestro data set. 
+```R
+popData %>%
+  select(Continent)
+
+```
+Esto nos genera un dataframe de una única columna con los continentes. ![Filtrado por continentes](../images/select_continent_blog_1.JPG)
+
+También podemos seleccionar más de una columna y renombrar la columna Growth Rate. 
+```R
+popData %>%
+  select(Country, Continent, Growth_Rate = 'Growth Rate')
+```
+Ahora tenemos un data frame con tres columnas. ![Data Frame con dos columnas](../images/select_mult_col_blog_1.JPG)
 
 ======
 
