--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -47,14 +47,34 @@ popData %>%
   select(Continent)
 
 ```
-Esto nos genera un dataframe de una única columna con los continentes. ![Filtrado por continentes](../images/select_continent_blog_1.JPG)
+Esto nos genera un dataframe de una única columna con los continentes. ![Filtrado por continentes](https://github.com/JorgeCortes-M/JorgeCortes-M.github.io/tree/master/images/select_continent_blog_1.JPG)
 
 También podemos seleccionar más de una columna y renombrar la columna Growth Rate. 
 ```R
 popData %>%
   select(Country, Continent, Growth_Rate = 'Growth Rate')
 ```
-Ahora tenemos un data frame con tres columnas. ![Data Frame con dos columnas](../images/select_mult_col_blog_1.JPG)
+Ahora tenemos un data frame con tres columnas. ![Data Frame con dos columnas](https://github.com/JorgeCortes-M/JorgeCortes-M.github.io/tree/master/images/select_mult_col_blog_1.JPG)
+
+También podemos cambiar el nombre a una columna llamando a la función rename de dplyr, de esta forma:
+
+```R
+popData %>%
+  select(Country, Continent, 'Growth Rate') %>%
+  rename(Growth_Rate = 'Growth Rate')
+
+```
+Como ves no hay una sola forma de llevar a cabo estas tareas y la utilización de la tubería %>% facilita mucho usar una función tras otra.
+
+Otra cosa que podemos hacer con select es utilizar funciones ayudantes o helper, en este caso usamos ends_with para seleccionar todas las columnas que terminen con "Population":
+
+```R
+popData %>%
+  select(ends_with("Population"))
+
+```
+
+Así obtenemos el siguiente dataframe ![Data frame ends_with](https://github.com/JorgeCortes-M/JorgeCortes-M.github.io/tree/master/images/select_ends_with.JPG)
 
 ======
 
