--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -47,14 +47,14 @@ popData %>%
   select(Continent)
 
 ```
-Esto nos genera un dataframe de una única columna con los continentes. ![Filtrado por continentes](../../../images/select_continent_blog_1.jpg)
+Esto nos genera un dataframe de una única columna con los continentes. ![Filtrado por continentes](../../images/select_continent_blog_1.jpg)
 
 También podemos seleccionar más de una columna y renombrar la columna Growth Rate. 
 ```R
 popData %>%
   select(Country, Continent, Growth_Rate = 'Growth Rate')
 ```
-Ahora tenemos un data frame con tres columnas. ![Data Frame con dos columnas](../../../images/select_mult_col_blog_1.jpg)
+Ahora tenemos un data frame con tres columnas. ![Data Frame con dos columnas](../../images/select_mult_col_blog_1.jpg)
 
 También podemos cambiar el nombre a una columna llamando a la función rename de dplyr, de esta forma:
 
@@ -74,7 +74,7 @@ popData %>%
 
 ```
 
-Así obtenemos el siguiente dataframe ![Data frame ends_with](../../../images/select_ends_with.jpg)
+Así obtenemos el siguiente dataframe ![Data frame ends_with](../../images/select_ends_with.jpg)
 
 La segunda función que veremos brevemente es relocate, la cual como su nombre dice nos permite cambiar el orden de una columna en el data frame.
 Podemos por ejemplo indicar que la columna Country quede como la última utilizando el parámetro .after, podríamos dejarla antes de la última también cambiando after por before. Incluso podemos hacer referencia a otra columna para posicionar la columna objetivo, pongamos Country luego de Continent.
