--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -74,7 +74,7 @@ popData %>%
 
 ```
 
-Así obtenemos el siguiente dataframe ![Data frame ends_with](../../images/select_ends_with.JPG)
+Así obtenemos el siguiente dataframe <img src="/jorgecortes-m.github.io/images/select_ends_with.JPG" alt="Data frame ends_with">
 
 La segunda función que veremos brevemente es relocate, la cual como su nombre dice nos permite cambiar el orden de una columna en el data frame.
 Podemos por ejemplo indicar que la columna Country quede como la última utilizando el parámetro .after, podríamos dejarla antes de la última también cambiando after por before. Incluso podemos hacer referencia a otra columna para posicionar la columna objetivo, pongamos Country luego de Continent.
