finalmente, imagenes arregladas

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -47,14 +47,14 @@ popData %>%
   select(Continent)
 
 ```
-Esto nos genera un dataframe de una única columna con los continentes. ![Filtrado por continentes](../../images/select_continent_blog_1.JPG)
+Esto nos genera un dataframe de una única columna con los continentes. <img src="https://jorgecortes-m.github.io/images/select_continent_blog_1.JPG" alt="Data frame ends_with">
 
 También podemos seleccionar más de una columna y renombrar la columna Growth Rate. 
 ```R
 popData %>%
   select(Country, Continent, Growth_Rate = 'Growth Rate')
 ```
-Ahora tenemos un data frame con tres columnas. ![Data Frame con dos columnas](../../images/select_mult_col_blog_1.JPG)
+Ahora tenemos un data frame con tres columnas. <img src="https://jorgecortes-m.github.io/images/select_mult_col_blog_1.JPG" alt="Data frame ends_with">
 
 También podemos cambiar el nombre a una columna llamando a la función rename de dplyr, de esta forma:
 
