--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -23,6 +23,12 @@ Imaginemos que deseamos el ranking y la abreviatura de Chile, para el caso del c
 ```R
 popData[which(popData$Country == "Chile"), names(popData) %in% c("Rank", "CCA3")]
 ```
+.markdown-body {
+  --md-code-background: #e3dcef;
+  --md-code-text: #4a2b7b;
+  --md-code-tabs: #c6b8dd;
+  --md-code-radius: 4px;
+}
 
 Mientras que con dplyr haríamos esto:
 ```R
