avanzando en el blog numero 1

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -41,6 +41,8 @@ head(popData) # Sin uso de pipe
 popData %>%
   head() # Con uso de pipe
 ```
+## Select()
+
 Ahora si, vamos a las funciones de Dplyr, partiremos por select(), esta nos permite seleccionar columnas de nuestro data frame indicando su nombre. Veamos, seleccionemos los continentes de nuestro data set. 
 ```R
 popData %>%
@@ -73,14 +75,110 @@ popData %>%
 
 Así obtenemos el siguiente dataframe <img src="https://jorgecortes-m.github.io/images/select_ends_with.JPG" alt="Data frame ends_with">
 
+## Relocate()
+
 La segunda función que veremos brevemente es relocate, la cual como su nombre dice nos permite cambiar el orden de una columna en el data frame.
-Podemos por ejemplo indicar que la columna Country quede como la última utilizando el parámetro .after, podríamos dejarla antes de la última también cambiando after por before. Incluso podemos hacer referencia a otra columna para posicionar la columna objetivo, pongamos Country luego de Continent.
+Podemos por ejemplo indicar que la columna Country quede como la última utilizando el parámetro .after. 
 
+```R
+popData %>%
+  select(Country, Continent, 'Growth Rate') %>%
+  rename(Growth_Rate = 'Growth Rate') %>%
+  relocate(Country, .after = last_col())
+```
 
-======
+Obteniendo el siguiente dataframe.
+<img src="https://jorgecortes-m.github.io/images/relocate_after.JPG" alt="Data frame relocate after">
 
-You can have many headings
-======
+Podríamos dejarla antes de la última columna cambiando after por before. 
 
-Aren't headings cool?
-------
+```R
+popData %>%
+  select(Country, Continent, 'Growth Rate') %>%
+  rename(Growth_Rate = 'Growth Rate') %>%
+  relocate(Country, .before = last_col())
+```
+Obteniendo el siguiente dataframe.
+<img src="https://jorgecortes-m.github.io/images/relocate_before.JPG" alt="Data frame relocate before">
+
+Incluso podemos hacer referencia a otra columna para posicionar la columna objetivo, pongamos Country luego de Continent.
+
+```R
+popData %>%
+  select(Country, Continent, 'Growth Rate') %>%
+  rename(Growth_Rate = 'Growth Rate') %>%
+  relocate(Country, .after = Continent)
+```
+Obteniedo el mismo dataframe que obtuvimos en el ejemplo anterior.
+<img src="https://jorgecortes-m.github.io/images/relocate_before.JPG" alt="Data frame relocate before">
+
+## Mutate()
+
+Siguiendo con las operaciones en columnas tenemos la función mutate, la cual nos permite crear una nueva columna. Por ejemplo una nueva columna podría ser una proyección de la población en 2023, al multiplicar la tasa de crecimiento por la población de cada país en 2022. Podríamos obtener también una columna con la diferencia en número de población entre 2022 y 2020 o incluso calcular el logaritmo de la población de 2022. Podemos hacer esto por separado o incluso en una sola línea de código.
+
+```R
+popData %>%
+  mutate(Proy_2023 = `2022 Population` * `Growth Rate`) %>%
+  mutate(Dif_betw_22_20 = `2022 Population` - `2020 Population`) %>%
+  mutate(log_2022 = log(`2022 Population`)) %>%
+  select(Proy_2023, Dif_betw_22_20, log_2022) #Caso de múltiples líneas
+
+popData %>%
+  mutate(Proy_2023 = `2022 Population` * `Growth Rate`,
+         Dif_betw_22_20 = `2022 Population` - `2020 Population`,
+         log_2022 = log(`2022 Population`))%>%
+  select(Proy_2023, Dif_betw_22_20, log_2022) #Caso de una sola línea
+```
+Obteniendo en ambos casos el siguiente dataframe.
+<img src="https://jorgecortes-m.github.io/images/mutate.JPG" alt="Dataframe con funcion mutate">
+
+Si notas, el nombre de la columna va antes de la operación que la define, además combinamos lo obtenido a través de mutate con la función select() para observar las nuevas columnas creadas.
+
+## Funciones que manipulan filas
+
+Ahora revisaremos las funciones que manipulan casos o filas. Quizás una de las más importantes es la función filter.
+
+## Filter()
+
+Esta función como lo indica su nombre nos permite filtrar nuestro data set para obtener solamente las observaciones que deseemos, por ejemplo podríamos obtener la información únicamente de Chile, al filtrar Country y buscar Chile.
+
+```R
+popData %>%
+  filter(Country == "Chile")
+```
+Obtendríamos el siguiente dataframe.
+<img src="https://jorgecortes-m.github.io/images/filter_unparam.JPG" alt="Dataframe con funcion filter y un parametro">
+
+Antes de continuar es importante mencionar que esta función va de la mano con los operadores lógicos o booleanos, los cuales puedes ![ver por acá](https://www.rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf).
+
+Podemos filtrar usando estos operadores e incluso combinarlos para obtener filtros mas precisos. Primero filtraremos por el ranking, escogiendo a aquellos que esten bajo el rank 100 y además sean paises de América del sur. podemos hacer eso mismo al utilizar el operador lógico AND, representado por este "&" carácter.
+
+```R
+popData %>%
+  filter(Rank < 100, Continent == "South America")
+
+popData %>%
+  filter(Rank < 100 & Continent == "South America")
+```
+
+Obteniendo el siguiente dataframe.
+<img src="https://jorgecortes-m.github.io/images/filter_and.JPG" alt="Dataframe con funcion filter operador AND">
+
+Podríamos querer aquellos paises que estén bajo el rank 100 , pero que no sean de América del sur, para eso usaríamos el operador NOT, representado por !=.
+
+```R
+popData %>%
+  filter(Rank < 100 & Continent != "South America")
+```
+Obteniendo el siguiente dataframe.
+<img src="https://jorgecortes-m.github.io/images/filter_not.JPG" alt="Dataframe con funcion filter operador NOT">
+
+Incluso podríamos filtrar para obtener nuevamente los países bajo el rank 100 o aquellos que sean de América del sur con el operador OR representado por |.
+
+```R
+popData %>%
+  filter(Rank < 100 | Continent == "South America")
+```
+
+Que nos da un datframe similar al anterior pero que además contiene a todos los paises de américa del sur.
+<img src="https://jorgecortes-m.github.io/images/filter_not.JPG" alt="Dataframe con funcion filter operador NOT">
