arreglando link de cheatsheet primer blog

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -149,7 +149,7 @@ popData %>%
 Obtendríamos el siguiente dataframe.
 <img src="https://jorgecortes-m.github.io/images/filter_unparam.JPG" alt="Dataframe con funcion filter y un parametro">
 
-Antes de continuar es importante mencionar que esta función va de la mano con los operadores lógicos o booleanos, los cuales puedes ![ver por acá](https://www.rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf).
+Antes de continuar es importante mencionar que esta función va de la mano con los operadores lógicos o booleanos, los cuales puedes [ver por acá](https://www.rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf).
 
 Podemos filtrar usando estos operadores e incluso combinarlos para obtener filtros mas precisos. Primero filtraremos por el ranking, escogiendo a aquellos que esten bajo el rank 100 y además sean paises de América del sur. podemos hacer eso mismo al utilizar el operador lógico AND, representado por este "&" carácter.
 
