Page update into english

--- a/_talks/2021-10-07-ALAG.md
+++ b/_talks/2021-10-07-ALAG.md
@@ -1,13 +1,13 @@
 ---
-title: "Evaluando el efecto de la contaminación con genes citocromo p450: ¿Tejido y/o tipo de familia?"
+title: "Evaluating the effect of pollution with cytochrome p450 genes: Tissue and/or family type?"
 collection: talks
-type: "Congreso"
+type: "Conference"
 permalink: /talks/2021-10-07-ALAG
-venue: "XVIII Congreso latinoamericano de genética"
+venue: "XVIII Latin American Congress of Genetics"
 date: 2021-10-07
 location: "Online"
 ---
 
-[Más información](https://alagenet.org/alag2021/)
+[More information](https://alagenet.org/alag2021/)
 
-La contaminación es un problema a escala global y es particularmente relevante en aguas continentales, debido a que gran parte de las actividades humanas se desarrollan en torno a éstas. Los organismos que habitan ambientes contaminados han desarrollado respuestas adaptativas y plásticas producto de estas condiciones. En este contexto, las familias de genes citocromo p450 (CYP) son muy importantes, y pueden codificar proteínas que metabolizan tanto compuestos endógenos como exógenos, siendo estos últimos los más estudiados en contexto de contaminación, aunque ambos han mostrado cambio en su expresión en estas condiciones. La cuenca del Río Maipo en Chile es una de las más afectadas por la contaminación de origen doméstico y agrícola. En esta cuenca habita el pejerrey endémico <i>Basilichthys microlepidotus</i>, en el cual se han detectado respuestas adaptativas y plásticas a la contaminación. El objetivo del presente estudio fue determinar expresión diferencial (a partir de datos de RNA-seq) de genes endógenos y exógenos de CYP en hígado y branquias de <i>B. microlepidotus</i> en condiciones de contaminación en la cuenca del Río Maipo. Se observó que los genes CYP de familias relacionadas con compuestos endógenos se expresan diferencialmente en el hígado, mientras que los de familias relacionadas con compuestos exógenos se expresan diferencialmente en las branquias. Nuestros resultados nos indican que al momento de monitorear los efectos de la contaminación con genes CYP es necesario tener en cuenta el órgano y también el tipo de familia a la cual el gen pertenece.
+Pollution is a global scale problem and is particularly relevant in inland waters, given that a large part of human activities take place around them. Organisms inhabiting polluted environments have developed adaptive and plastic responses as a result of these conditions. In this context, cytochrome p450 (CYP) gene families are very important, and can encode proteins that metabolize both endogenous and exogenous compounds, the latter being the most studied in the context of pollution, although both have shown changes in their expression under these conditions. The Maipo River basin in Chile is one of the most affected by domestic and agricultural pollution. In this basin inhabits the silverside endemic to Chile <i>Basilichthys microlepidotus</i>, in which adaptive and plastic responses to pollution have been detected. The objective of the present study was to determine differential expression (from RNA-seq data) of endogenous and exogenous CYP genes in liver and gills of <i>B. microlepidotus</i> under pollution conditions in the Maipo River basin. It was observed that CYP genes from families related to endogenous compounds are differentially expressed in the liver, while those from families related to exogenous compounds are differentially expressed in the gills. Our results indicate that when monitoring the effects of pollution with CYP genes it is necessary to take into account the organ and also the type of family to which the gene belongs.
