--- a/_talks/2021-12-02-CLEVOL.md
+++ b/_talks/2021-12-02-CLEVOL.md
@@ -1,13 +1,13 @@
 ---
-title: "Expresión génica frente a contaminación crónica: El caso de <i>Basilichthys microlepidotus</i> en la cuenca del Río Maipo."
+title: "Gene expression in the face of chronic pollution: The case of <i>Basilichthys microlepidotus</i> in the Maipo River basin."
 collection: talks
-type: "Congreso"
+type: "Conference"
 permalink: /talks/2021-02-01-talk-2
-venue: "I Congreso latinoamericano de evolución"
+venue: "I Latin American Congress of Evolution"
 date: 2021-12-02
 location: "Online"
 ---
 
-[Página CLEVOL](https://www.clevol2021.com)
+[CLEVOL Page](https://www.clevol2021.com)
 
-Dentro de los elementos del cambio global, la contaminación y en particular aquella que afecta a los sistemas de agua dulce, es muy relevante debido a su impacto directo sobre las poblaciones naturales. En cuanto a la estimación de los efectos a nivel biológico de la contaminación, una aproximación es la identificación de genes que cambian su expresión para ser utilizados como biomarcadores. Sin embargo, pocos trabajos se han centrado en poblaciones naturales, las cuales pueden experimentar condiciones crónicas de contaminación en la mayoría de los casos. En este trabajo se identificaron (mediante RNA-seq) genes y vías relevantes que mostraron su expresión alterada producto de la contaminación crónica, en hígado y branquias de <i>Basilichthys microlepidotus</i>, pez endémico de Chile que habita la cuenca del Río Maipo. Se analizaron 4 sitios, 3 contaminados (IM, MEL y PEL) y uno no contaminado (SFM), colectando 6 individuos por sitio. En hígado se identificaron 13 contigs diferencialmente expresados compartidos por los 3 sitios contaminados, además se observó sobrerrepresentación de procesos asociados a la división celular, metabolismo de triptófano y respuesta inmune. En el caso de branquias se identificaron 9 contigs diferencialmente expresados compartidos por los 3 sitios contaminados, también se observó sobrerrepresentación de procesos asociados a respiración celular, respuesta inmune, además de citoesqueleto. En este trabajo hemos identificado algunas vías y genes que podrían ser relevantes en condiciones de contaminación crónica, los cuales podrían arrojar pistas sobre la adaptación de los organismos a esta condición y permitirían elaborar mejores planes de biomonitoreo.
+Within the elements of global change, pollution and in particular that which affects freshwater systems, is very relevant due to its direct impact on natural populations. Regarding the estimation of effects at the biological level of pollution, one approach is the identification of genes that change their expression to be used as biomarkers. However, few works have focused on natural populations, which can experience chronic conditions of pollution in most cases. In this work, relevant genes and pathways that showed their expression altered as a product of chronic pollution were identified (through RNA-seq), in liver and gills of <i>Basilichthys microlepidotus</i>, a fish endemic to Chile that inhabits the Maipo River basin. 4 sites were analyzed, 3 polluted (IM, MEL and PEL) and one unpolluted (SFM), collecting 6 individuals per site. In liver, 13 differentially expressed contigs shared by the 3 polluted sites were identified, in addition, overrepresentation of processes associated with cell division, tryptophan metabolism and immune response was observed. In the case of gills, 9 differentially expressed contigs shared by the 3 polluted sites were identified, also overrepresentation of processes associated with cellular respiration, immune response, in addition to cytoskeleton was observed. In this work we have identified some pathways and genes that could be relevant in conditions of chronic pollution, which could shed clues about the adaptation of organisms to this condition and allow developing better biomonitoring plans.
